grammars/tree-sitter-svg/grammar.js
		source_file: $ =>
			seq(
				// XML 1.0 §2.8 requires xml_declaration to be absolute first,
				// but real-world SVGs (incl. W3C reference samples) often
				// have a leading newline/BOM/whitespace; be lenient here.
				// Leading misc only permitted when an xml_declaration follows,
				// to keep source_file_repeat1 unambiguous.
				optional(seq(repeat($._misc), $.xml_declaration)),
				repeat($._misc),
				optional(seq($.doctype, repeat($._misc))),
				field('root', $.svg_root_element),
				repeat($._misc),
			),

		_misc: $ =>
			choice(
				$.processing_instruction,
				$.comment,
				alias($.misc_text, $.text),
			),

		svg_root_element: $ =>
			choice(
				$.self_closing_tag,
				seq(
					$.start_tag,
					repeat($._content),
					choice($.end_tag, $.erroneous_end_tag),
				),
			),

		// ─── Generic Element ────────────────────────────────────────

		element: $ =>
			choice(
				$._script_element,
				$._style_element,
				$._path_element,
				$.self_closing_tag,
				seq($.start_tag, repeat($._content), choice($.end_tag, $.erroneous_end_tag)),
			),

		_content: $ =>
			choice(
				$.element,
				$._text_like_content,
			),

		_script_element: $ =>
			choice(
				alias($.script_self_closing_tag, $.self_closing_tag),
				seq(
					alias($.script_start_tag, $.start_tag),
					optional(alias($._raw_text, $.raw_text)),
					choice(alias($.script_end_tag, $.end_tag), $.erroneous_end_tag),
				),
			),

		_style_element: $ =>
			choice(
				alias($.style_self_closing_tag, $.self_closing_tag),
				seq(
					alias($.style_element_start_tag, $.start_tag),
					optional(alias($._raw_text, $.raw_text)),
					choice(alias($.style_end_tag, $.end_tag), $.erroneous_end_tag),
				),
			),

		_path_element: $ =>
			choice(
				alias($.path_self_closing_tag, $.self_closing_tag),
				seq(
					alias($.path_start_tag, $.start_tag),
					repeat($._content),
					choice(alias($.path_end_tag, $.end_tag), $.erroneous_end_tag),
				),
			),

		start_tag: $ =>
			seq(
				'<',
				field('name', alias($._start_tag_name, $.name)),
				repeat(seq($._s, $.attribute)),
				optional($._s),
				'>',
			),

		end_tag: $ =>
			seq(
				'</',
				field('name', alias($._end_tag_name, $.name)),
				optional($._s),
				'>',
			),

		self_closing_tag: $ =>
			seq(
				'<',
				field('name', alias($._start_tag_name, $.name)),
				repeat(seq($._s, $.attribute)),
				optional($._s),
				'/>',
			),

		erroneous_end_tag: $ =>
			seq(
				'</',
				field('name', alias($._erroneous_end_tag_name, $.name)),
				optional($._s),
				'>',
			),

		// ─── Attributes ─────────────────────────────────────────────

		// Supertype over every concrete attribute bucket. The members are a
		// flat choice of single named symbols (28 typed + generic) so the
		// tree-sitter supertype validator accepts it; the former hidden
		// `_typed_attribute` intermediate produced zero CST nodes, so
		// flattening it here is tree-identical.
		css_text_attribute: $ =>
			seq(
				field('name', $.css_text_attribute_name),
				$._eq,
				field('value', $.css_text_attribute_value),
			),

		css_text_attribute_name: _ => oneOf(ATTRIBUTE_BUCKETS.css_text),

		css_text_attribute_value: $ =>
			choice(
				seq('"', optional(field('content', $.css_attribute_text_double)), '"'),
				seq("'", optional(field('content', $.css_attribute_text_single)), "'"),
			),

		css_attribute_text_double: _ => token(/[^"]+/),
		_eq: $ => seq(optional($._s), '=', optional($._s)),

		text: _ => token(prec(-1, /[^<&]+/)),

		name: _ => token(/(?:[A-Za-z_:]|[\u0080-\uFFFF])(?:[A-Za-z0-9_.:-]|[\u0080-\uFFFF])*/),

		_s: _ => token(/[ \t\r\n]+/),
	},
});
